[gd_scene load_steps=20 format=2]

[ext_resource path="res://LegendOfZelda/Scripts/Woodsman.gd" type="Script" id=1]
[ext_resource path="res://LegendOfZelda/Assets/woodsman.png" type="Texture" id=2]
[ext_resource path="res://LegendOfZelda/Scripts/DialogChoices.gd" type="Script" id=3]
[ext_resource path="res://OregonTrail/Fonts/Averia_Serif_Libre/AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://LegendOfZelda/Scenes/TextPanel.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 7 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 135, 135 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 135, 0, 135, 135 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 270, 0, 135, 135 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 405, 0, 135, 135 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 135, 135 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 675, 0, 135, 135 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 810, 0, 135, 135 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 4 )

[node name="Woodsman" type="Area2D"]
position = Vector2( 60, -150 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 80 )
scale = Vector2( 12, 22 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="WoodsmanL1" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WoodsmanL1"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WoodsmanL1/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WoodsmanL1/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 4 )
text = "I used to be the greatest WOODSMAN in all the land. But these days, I’m feeling kind of tired."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WoodsmanL1/ChoicesBorder/ChoicesBox"]
margin_left = 20.0
margin_top = 45.0
margin_right = 127.0
margin_bottom = 65.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“What’s got you tired?”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WoodsmanL1/ChoicesBorder/ChoicesBox"]
margin_left = 141.0
margin_top = 45.0
margin_right = 298.0
margin_bottom = 65.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“I don’t want to talk to you. I want to punch you..”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WoodsmanL1/ChoicesBorder/ChoicesBox"]
margin_left = 15.0
margin_top = 47.0
margin_right = 17.0
margin_bottom = 51.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WoodsmanL1/ChoicesBorder/ChoicesBox"]
margin_left = 137.0
margin_top = 47.0
margin_right = 139.0
margin_bottom = 51.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodsmanL2" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WoodsmanL2"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WoodsmanL2/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WoodsmanL2/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 4 )
text = "It’s this tree! I’ve been trying to cut it down for what feels like forever, but I just can’t manage it."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WoodsmanL2/ChoicesBorder/ChoicesBox"]
margin_left = 12.0
margin_top = 50.0
margin_right = 119.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“You’re probably just too weak and pathetic.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WoodsmanL2/ChoicesBorder/ChoicesBox"]
margin_left = 205.0
margin_top = 50.0
margin_right = 312.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“Do you need a better axe?”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WoodsmanL2/ChoicesBorder/ChoicesBox"]
margin_left = 6.0
margin_top = 52.0
margin_right = 8.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WoodsmanL2/ChoicesBorder/ChoicesBox"]
margin_left = 200.0
margin_top = 52.0
margin_right = 202.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodsmanL3" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="WoodsmanL3"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="WoodsmanL3/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="WoodsmanL3/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 4 )
text = "You may be onto something there. If my axe is too dull, I could sharpen it with a WHETSTONE. Could you help me out by finding one?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="WoodsmanL3/ChoicesBorder/ChoicesBox"]
margin_left = 15.0
margin_top = 55.0
margin_right = 122.0
margin_bottom = 75.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“I’d be happy to.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="WoodsmanL3/ChoicesBorder/ChoicesBox"]
margin_left = 100.0
margin_top = 55.0
margin_right = 257.0
margin_bottom = 75.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 5 )
text = "“I cannot begin to express how much I don’t want to help you.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="WoodsmanL3/ChoicesBorder/ChoicesBox"]
margin_left = 8.0
margin_top = 57.0
margin_right = 10.0
margin_bottom = 61.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="WoodsmanL3/ChoicesBorder/ChoicesBox"]
margin_left = 93.0
margin_top = 57.0
margin_right = 95.0
margin_bottom = 61.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RejectPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="RejectPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="RejectPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="RejectPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 7 )
text = "How rude! Get out of my sight, you ingrate.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinTeamPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="JoinTeamPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="JoinTeamPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="JoinTeamPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 7 )
text = "Excellent! Now I can work with a proper axe! Thank you, friend! Allow me to join you on your journey."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_7UP_body_entered"]
[connection signal="about_to_show" from="WoodsmanL1" to="WoodsmanL1/ChoicesBorder/ChoicesBox" method="onShow"]
[connection signal="about_to_show" from="WoodsmanL1" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WoodsmanL1" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="WoodsmanL1/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="WoodsmanL2" to="WoodsmanL2/ChoicesBorder/ChoicesBox" method="onShow"]
[connection signal="about_to_show" from="WoodsmanL2" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WoodsmanL2" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="WoodsmanL2/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="WoodsmanL3" to="WoodsmanL3/ChoicesBorder/ChoicesBox" method="onShow"]
[connection signal="about_to_show" from="WoodsmanL3" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="WoodsmanL3" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="WoodsmanL3/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="RejectPanel" to="." method="_on_RejectPanel_about_to_show"]
[connection signal="popup_hide" from="RejectPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="about_to_show" from="JoinTeamPanel" to="." method="_on_JoinTeamPanel_about_to_show"]
[connection signal="popup_hide" from="JoinTeamPanel" to="." method="_on_PopupPanel_popup_hide"]
